# SocialNetwork

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
profiles/: admin.py  models.py  serializers.py  views.py
profiles/migrations/: 0001_initial.py  0002_usernet_bio_usernet_birthday_usernet_gender_and_more.py  0003_rename_git_hub_usernet_github_and_more.py
src/: routers.py
src/profiles/: models.py
