[tool.poetry]
name = "mfsn"
version = "0.1.0"
description = "My Fisrt Social Network"
authors = ["JirniyJirniy <nik.vardi127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
pillow = "^9.4.0"
psycopg2 = "^2.9.5"
djoser = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
